--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: https://jlu18.github.io # the base hostname & protocol for your site, e.g. 
 github_username:  jlu18
 
 # Build settings
-theme: minima
+theme: jekyll-theme-midnight
 plugins:
   - jekyll-feed
 
